[package]
name = "unwrap_qr"
version = "0.1.0"
edition = "2021"


[dependencies]
actix = "0.10"
actix-multipart = "0.4"
# actix-form-data="0.6"
actix-web = "4"
askama = "0.11"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
env_logger = "0.10"
futures = "0.3"
futures-util = "0.3.25"
image = "0.24"
indexmap = "1"
lapin = "2"
log = "0.4"
queens-rock = "0.1"
rmp-serde = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
thiserror = "1"
tokio = {version = "1", features = ["full"] }
uuid = { version="1", features= ["v4"] }

[[bin]]
name = "unwrap_qr_server"
path = "src/server.rs"
test = false

[[bin]]
name = "unwrap_qr_worker"
path = "src/worker.rs"
test = false
